--- a/Front/cilent/assets/css/index.css
+++ b/Front/cilent/assets/css/index.css
@@ -208,7 +208,7 @@ header .header-info .page-list .pages-pc ul {
     backdrop-filter: blur(8px);
 }
 
-.searchs .search-list input::placeholder{
+.searchs .search-list input::placeholder {
     color: #ffffffb7;
 }
 
@@ -220,20 +220,20 @@ header .header-info .page-list .pages-pc ul {
     transition: all 0.5s ease;
     border: 1px solid #ffffff69;
 
-    position: relative; 
+    position: relative;
 }
 
-.searchs .search-list ul::before { 
+.searchs .search-list ul::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; 
-    background: #000000c9;  
+    height: 100%;
+    background: #000000c9;
     backdrop-filter: blur(8px);
-    z-index: -1; 
-}  
+    z-index: -1;
+}
 
 
 .search-list .product-list .prod-name {
@@ -900,9 +900,14 @@ header .header-info .page-list .pages-pc ul {
 
 .footer-top .brand-info .contact a {
     text-decoration: none;
-    color: #fff;
+    color: #dfdfdfd5;
     font-size: 12px;
 }
+
+.footer-top .brand-info .contact a:hover {
+    color: #fff;
+}
+
 
 .footer-top .brand-info .contact img {
     width: 14px;
@@ -950,11 +955,16 @@ header .header-info .page-list .pages-pc ul {
 }
 
 .info-list a {
-    color: #fff;
+    color: #dfdfdfd5;
     font-size: 12px;
     text-decoration: none;
     position: relative;
 }
+
+.info-list a:hover {
+    color: rgb(255, 254, 254);
+}
+
 
 .info-list a::after {
     content: '';
@@ -1034,6 +1044,7 @@ header .header-info .page-list .pages-pc ul {
 .subscribe p {
     width: 250px;
     font-size: 12px;
+    color: #dfdfdfd5;
 }
 
 .subscribe-form div {
