Added Product Detail + Shop-Filter

--- a/Front/cilent/assets/css/home.css
+++ b/Front/cilent/assets/css/home.css
@@ -910,6 +910,10 @@ TRENDY SLIDER - Start
     transform: scale(1.15);
 }
 
+.section.trendy .swiper-slide.trendy-product .product-info img:hover + .wish-share span {
+    transform: scale(1.15);
+}
+
 .section.trendy .swiper-slide.trendy-product .product-info img:active {
     transform: scale(0.9);
 }
